--- a/app/src/main/res/layout/row_persona.xml
+++ b/app/src/main/res/layout/row_persona.xml
@@ -26,26 +26,38 @@
             android:layout_marginBottom="@dimen/marginTopFirstElem">
             <TextView
                 android:id="@+id/txtNombre"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/textColorPrimary"
-                android:text=""
+                android:text="uhiuhh"
                 android:textSize="@dimen/primaryTextSize"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintHorizontal_bias="0" />
+
             <TextView
                 android:id="@+id/txtPais"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/textColorSecondary"
-                android:text=""
+                android:text="popop"
                 android:textSize="@dimen/secondaryTextSize"
                 android:layout_marginTop="@dimen/marginTopBtwElems"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txtNombre"/>
+
+            <ImageView
+                android:id="@+id/imgDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:src="@drawable/baseline_delete_white_36"
+                app:layout_constraintStart_toEndOf="@+id/txtNombre"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/black" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
