--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="textColorSecondary">#5E6169</color>
 
 
-
+    <color name="red">#DD2C00</color>
     <color name="gray2">#25000000</color>
     <color name="gray3">#11000000</color>
     <color name="gray4">#775E6169</color>
