Actualización de la lista después de eliminar

--- a/app/src/main/res/layout/lyt_sav_persona.xml
+++ b/app/src/main/res/layout/lyt_sav_persona.xml
@@ -38,6 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/lblDocumento"
+                android:inputType="number"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
